//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "BattleItem.proto"
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventMonsterProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message CreateBattleItemRequestProto {
	optional MinimumUserProto sender = 1;
	
	//what user deleted from the queue, the ones the server already knows about
	repeated BattleItemQueueForUserProto umhDelete = 2; 
	
	//the ones the server already knows about
	//only set if the queue time or start time changes
	repeated BattleItemQueueForUserProto umhUpdate = 3;
	
	//the ones the server doesn't know about
	repeated BattleItemQueueForUserProto umhNew = 4;
	
	//take away all cash/silver then take away gems
	//positive means refund, negative means charge user
	//Refund in this case: user has two monsters healing but deletes one of them,
	//The user should get refunded for the monster that was dequeued 
	optional sint32 cashChange = 5; 
	optional sint32 oilChange = 6;
	
	//positive amount if charging user, negative if refunding user
	optional int32 gemCostForCreating = 7; 

	optional bool isSpeedup = 7;
	optional int32 gemsForSpeedup = 8; //pos amount if charging user
	
}

message CreateBattleItemResponseProto {
	optional MinimumUserProto sender = 1;
	repeated UserBattleItemProto userBattleItems
	optional CreateBattleItemStatus status = 2;
	
	enum CreateBattleItemStatus {
		SUCCESS = 1;
		FAIL_OTHER = 2;
		FAIL_INSUFFICIENT_FUNDS = 3;
		FAIL_AT_MAX_POWER_LIMIT = 4;
		FAIL_ALL_MONSTERS_NONEXISTENT = 5;
		FAIL_CREATING_NOT_COMPLETE = 6;
	}
}


message DiscardBattleItemRequestProto {
	optional MinimumUserProto sender = 1;
	
	//user can choose to throw away existing battle items so he has the 
	//"power" to create different ones
	repeated BattleItemForUserProto discardedBattleItems = 2;

}

message DiscardBattleItemResponseProto {
	optional MinimumUserProto sender = 1;
	optional DiscardBattleItemStatus status = 2;
	
	enum DiscardBattleItemStatus {
		SUCCESS = 1;
		FAIL_OTHER = 2;
		FAIL_BATTLE_ITEMS_DONT_EXIST = 3;
	}
}	
